# object-storage-system

./: .env.example  .gitignore  pyproject.toml
app/: R2_bucket.py  main.py
app/clients/: r2.py  supabase.py
app/core/: config.py
app/routers/: upload.py
app/schema/: user.py
app/service/: bucket_storage.py  database_service.py
app/templates/: form.html
