[project]
name = "spb"
version = "0.1.0"
description = ""
authors = [
    {name = "Harshit",email = "workwithvrz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "supabase (>=2.28.0,<3.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "boto3 (>=1.42.62,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
